# Blender_MCP_PRO

./: .gitignore  LICENSE  README.md  build_addon.py  claude_desktop_config_example.json  install_addon.py  pyproject.toml
addon/: __init__.py  blender_manifest.toml  connection.py  dispatcher.py  panels.py  preferences.py  validation.py
addon/handlers/: __init__.py  material.py  mesh.py  modifier.py  object.py  scene.py  selection.py  viewport.py
server/: __init__.py  auto_screenshot.py  blender_client.py  main.py  tool_registry.py
server/tools/: __init__.py  material_tools.py  mesh_tools.py  modifier_tools.py  object_tools.py  scene_tools.py  selection_tools.py  viewport_tools.py
shared/: __init__.py  constants.py  error_codes.py  protocol.py
tests/: conftest.py  test_integration.py  test_protocol.py  test_validation.py
training/: bulk_analyze.py  fbx_to_recipe.py  generate_training_data.py  schema.md
training/recipes/: structure_medieval_well.json
training/templates/: structure_medieval_well.json
