[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blendermcp-pro"
version = "0.1.0"
description = "MCP server for AI-driven 3D modeling in Blender"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
blendermcp = "server.main:main"

[tool.hatch.build.targets.wheel]
packages = ["server", "shared"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
